--- a/index.html
+++ b/index.html
@@ -53,13 +53,134 @@
 
     </section>
     <!--introducao-->
-    
+
     <section class="container">
-        <h2>Peixes</h2>
-        <div class="produto_01">
-            
+        <h2 class="subtitulo">Peixes</h2>
+        <ul class="peixe_lista">
+            <li class="grid-8">
+                <div>
+                    <img src="./img/peixed_01.jpg" alt="peixes dulcícolas">
+                </div>
+                <h3>Peixes Dulcícolas</h3>
+            </li>
+            <li class="grid-8">
+                <div>
+                    <img src="./img/peixed_02.jpg" alt="peixes dulcícolas">
+                </div>
+                <h3>Peixes Marinhos</h3>
+            </li>
+            <!--grid-8-->
+        </ul>
+        <!--peixe_lista-->
+        <div class="call">
+            <p>Clique aqui e conheça nosso catálogo</p>
+            <a href="peixe.html" class="btn btn-azul">Peixes</a>
         </div>
+        <!--call-->
     </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="subtitulo subtitulo-azul">Portfólio</h2>
+            <ul>
+                <li class="grid-8"><img src="./img/portfolio/personal_01.jpg"></li>
+                <li class="grid-8"><img src="./img/portfolio/personal_02.jpg"></li>
+                <li class="grid-16"><img src="./img/portfolio/personal_03.jpg"> </li>
+            </ul>
+            <div class="call">
+                <p>Clique aqui e conheça nossos projetos</p>
+                <a href="portfolio.html" class="btn">Portfólio</a>
+            </div>
+            <!--call-->
+        </div>
+        <!--container--->
+    </section>
+    <!--portfolio-->
+
+    <section class="container qualidade">
+        <h2 class="subtitulo">Qualidade</h2>
+        <img src="./img/logo_02.png" alt="logo fishplanet">
+        <ul>
+            <li class="grid-1-3">
+                <h3>Beleza</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec condimentum odio.</p>
+            </li>
+            <li class="grid-1-3">
+                <h3>Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec condimentum odio.</p>
+            </li>
+            <li class="grid-1-3">
+                <h3>Sofisticação</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec condimentum odio.</p>
+            </li>
+        </ul>
+
+        <div class="call">
+            <p>Conheça mais sobre a gente</p>
+            <a href="sobre.html" class="btn btn-azul">Sobre</a>
+        </div>
+        <!--call-->
+    </section>
+    <!--container-->
+
+    <section class="quebra">
+        <div class="container">
+            <blockquote class="quote_externo">
+                <p>“A simplicidade é o último
+                    grau de sofisticação”.</p>
+                <cite>Leonardo da Vinci</cite>
+            </blockquote>
+            <!--quote-externo---->
+        </div>
+        <!--container-->
+    </section>
+    <!--quebra-->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="nossa_historia grid-8">
+
+                <h3>Nossa História</h3>
+                <p>Lorem ipsum massa nisi pharetra sapien pretium eleifend magna quisque, lobortis mollis enim
+                    sodales pretium ut dapibus sapien semper, tristique primis hac dictumst iaculis rutrum nam
+                    orci.
+                </p>
+
+            </div>
+            <!--nossa_historia grid-8-->
+
+            <div class="contato grid-4">
+                <h3>Contato</h3>
+                <ul>
+                    <li>- contato@fisplanet.com</li>
+                    <li> - (61) 3456-0000</li>
+                    <li> - Brasília -DF</li>
+                </ul>
+            </div>
+            <!--contato grid-4-->
+
+            <div class="redes_sociais grid-4">
+                <h3>Redes sociais</h3>
+                <ul>
+                    <li><a href="https://facebook.com" target="_blank"><img src="./img/icone_fb.png"></a></li>
+                    <li><a href="https://instagram.com" target="_blank"><img src="./img/icone_insta.png"></a>
+                    </li>
+                    <li><a href="https://twitter.com" target="_blank"><img src="./img/icone_tt.png"></a></li>
+                </ul>
+            </div>
+            <!--redes_sociais grid-4-->
+            </ul>
+
+        </div>
+        <!--container-->
+        <div class="copy">
+            <div class="container">
+                <p class="grid-16">FishPlanet 2019 - Alguns direitos reservados </p>
+            </div><!--container-->
+        </div>
+        <!--copy-->
+    </footer>
+    <!--footer-->
 </body>
 
 </html>
