--- a/portfolio.html
+++ b/portfolio.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Conheça mais sobre a história da FishPlanet">
+    <meta name="description" content="Veja os projetos realizados pela FishPlanet e depoimentos de clientes">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="FishPlanet - Sobre nós">
-    <meta property="og:description" content="Conheça mais sobre a história da FishPlanet">
-    <meta property="og:url" content="htpp://camilarqf/fishplanet.github.io">
+    <meta property="og:title" content="FishPlanet - Portfólio de Projetos">
+    <meta property="og:description" content="Veja os projetos realizados pela FishPlanet e depoimentos de clientes">
+    <meta property="og:url" content="htpp://camilarqf/fishplanet.github.io/portfolio.html">
     <meta property="og:image" content="htpp://camilarqf/fishplanet.github.io/img/og-image.png">
 
     <link href="./css/normalize.css" rel="stylesheet">
     <link href="./css/reset.css" rel="stylesheet">
     <link href="./css/grid.css" rel="stylesheet">
     <link href="./css/style-raw.css" rel="stylesheet">
-    <link href="./css/sobre.css" rel="stylesheet">
-    <title>FishPlanet - Sobre nós</title>
+    <link href="./css/portfolio.css" rel="stylesheet">
+    <title>FishPlanet - Portfólio de Projetos</title>
 </head>
 
 <body>
@@ -27,9 +27,9 @@
             <a href="index.html" class="grid-4"> <img src="./img/logo_03.png" alt="Logo FishPlanet"></a>
             <nav class="menu grid-12">
                 <ul>
-                    <li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="peixes.html">Peixes</a></li>
-                    <li><a href="portfolio.html">Portfólio</a></li>
+                    <li><a href="portfolio.html" class="menu_ativo">Portfólio</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
@@ -39,60 +39,36 @@
     </header>
     <!--header-->
 
-    <section class="introducao-interna intro-sobre">
+    <section class="introducao-interna intro-portfolio">
         <div class="container">
-            <h1>Sobre</h1>
-            <p>Conheça mais sobre a FishPlanet</p>
+            <h1>Portfólio</h1>
+            <p>Veja os nossos projetos</p>
         </div>
         <!--container-->
     </section>
-    <!--introducao-interna intro-sobre-->
+    <!--introducao-interna intro-portfolio-->
 
     <section class="container">
-        <div class="missao-sobre grid-10">
-            <h2 class="subtitulo-interno">História, Missão e Visão</h2>
-            <p>Lorem ipsum aliquet sollicitudin suspendisse lobortis iaculis elementum morbi habitant, neque ut vitae
-                dictum ad metus curae ultrices quisque, elit nullam eget nullam at est quis lectus.</p>
+        <blockquote class="quote-cliente">
+            <p>“ No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da
+                gestão
+                inovadora da qual fazemos parte.”</p>
 
-            <p>Lorem ipsum aliquet sollicitudin suspendisse lobortis iaculis elementum morbi habitant, neque ut vitae
-                dictum ad metus curae ultrices quisque, elit nullam eget nullam at est quis lectus. </p>
-        </div>
-        <!--missao-sobre grid-10-->
-
-        <div class="valores-sobre grid-6">
-            <h2 class="subtitulo-interno">Valores</h2>
-            <ul>
-                <li>- Qualidade no processo com</li>
-                <li> - Foco no cliente sem perder a</li>
-                <li> - Diversao, preservando a</li>
-                <li> - Natureza com sustentabilidade</li>
-            </ul>
-        </div> <!--valores-sobre grid-6-->
+            <cite> Barbara Moss</cite>
+        </blockquote>
+        <!--"quote-cliente-->
     </section>
     <!--container-->
 
-    <section class="container equipe">
-        <img src="./img/sobre/equipe.jpg"  class="grid-16" alt="equipe fishplanet">
-    </section><!--container equipe-->
-
-    <section class="qualidade-sobre container">
-        <h2 class="subtitulo-interno">Qualidade</h2>
-        <img src="./img/logo_02.png" alt="logo fishplanet">
-        <ul>
-            <li class="grid-1-3">
-                <h3>Beleza</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec condimentum odio.</p>
-            </li>
-            <li class="grid-1-3">
-                <h3>Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec condimentum odio.</p>
-            </li>
-            <li class="grid-1-3">
-                <h3>Sofisticação</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec condimentum odio.</p>
-            </li>
-        </ul>
-    </section><!--qualidade-sobre container-->
+    <section class="fotos-portfolio">
+        <div class="container">
+            <ul class="portfolio-lista">
+                <li class="grid-8"><img src="./img/portfolio/personal_01.jpg" alt="foto-01"></li>
+                <li class="grid-8"><img src="./img/portfolio/personal_02.jpg" alt="foto-02"></li>
+                <li class="grid-16"><img src="./img/portfolio/personal_03.jpg" alt="foto-03"></li>
+            </ul>
+        </div>
+    </section>
 
     <section class="quebra">
         <div class="container">
