--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="./css/reset.css" rel="stylesheet">
     <link href="./css/grid.css" rel="stylesheet">
     <link href="./css/style-raw.css" rel="stylesheet">
+    <link href="./css/responsivo.css" rel="stylesheet">
     <title>FishPlanet - Aquários Personalizados</title>
 </head>
 
