--- a/sobre.html
+++ b/sobre.html
@@ -18,6 +18,7 @@
     <link href="./css/grid.css" rel="stylesheet">
     <link href="./css/style-raw.css" rel="stylesheet">
     <link href="./css/sobre.css" rel="stylesheet">
+    <link href="./css/responsivo.css" rel="stylesheet">
     <title>FishPlanet - Sobre nós</title>
 </head>
 
