--- a/peixes.html
+++ b/peixes.html
@@ -18,6 +18,7 @@
     <link href="./css/grid.css" rel="stylesheet">
     <link href="./css/style-raw.css" rel="stylesheet">
     <link href="./css/peixe.css" rel="stylesheet">
+    <link href="./css/responsivo.css" rel="stylesheet">
     <title>FishPlanet - Catálogo de Peixes</title>
 </head>
 
