correção icone redes sociais

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="htpp://camilarqf/fishplanet.github.io">
     <meta property="og:image" content="htpp://camilarqf/fishplanet.github.io/img/og-image.png">
 
-    <!--<link href="./css/normalize.css" rel="stylesheet">
+    <link href="./css/normalize.css" rel="stylesheet">
     <link href="./css/reset.css" rel="stylesheet">
     <link href="./css/grid.css" rel="stylesheet">
     <link href="./css/style-raw.css" rel="stylesheet">
-    <link href="./css/responsivo.css" rel="stylesheet">-->
+    <link href="./css/responsivo.css" rel="stylesheet">
 
-    <link href="./css/style.css" rel="stylesheet">
-
+    <!--<link href="./css/style.css" rel="stylesheet">
+-->
     <link rel="shortcut icon" href="favicon.ico">
 
     <script src="./js/libs/modernizr.custom.js"></script>
@@ -170,12 +170,12 @@
             <div class="redes_sociais grid-4">
                 <h3>Redes sociais</h3>
                 <ul>
-                    <li><a href="https://facebook.com" target="_blank"><img src="./img/contato/icone_fb.png"
+                    <li><a href="https://facebook.com" target="_blank"><img src="./img/icone_fb.png"
                                 alt="Ícone Facebook"></a></li>
-                    <li><a href="https://instagram.com" target="_blank"><img src="./img/contato/icone_insta.png"
+                    <li><a href="https://instagram.com" target="_blank"><img src="./img/icone_insta.png"
                                 alt="Ícone Instagram"></a>
                     </li>
-                    <li><a href="https://twitter.com" target="_blank"><img src="./img/contato/icone_tt.png"
+                    <li><a href="https://twitter.com" target="_blank"><img src="./img/icone_tt.png"
                                 alt="Ícone Twitter"></a></li>
                 </ul>
             </div>
