--- a/portfolio.html
+++ b/portfolio.html
@@ -150,13 +150,13 @@
             <div class="redes_sociais grid-4">
                 <h3>Redes sociais</h3>
                 <ul>
-                    <li><a href="https://facebook.com" target="_blank"><img src="./img/contato/icone_fb.png"
-                                alt="Ícone Facebook"></a></li>
-                    <li><a href="https://instagram.com" target="_blank"><img src="./img/contato/icone_insta.png"
-                                alt="Ícone Instagram"></a>
-                    </li>
-                    <li><a href="https://twitter.com" target="_blank"><img src="./img/contato/icone_tt.png"
-                                alt="Ícone Twitter"></a></li>
+                        <li><a href="https://facebook.com" target="_blank"><img src="./img/icone_fb.png"
+                            alt="Ícone Facebook"></a></li>
+                <li><a href="https://instagram.com" target="_blank"><img src="./img/icone_insta.png"
+                            alt="Ícone Instagram"></a>
+                </li>
+                <li><a href="https://twitter.com" target="_blank"><img src="./img/icone_tt.png"
+                            alt="Ícone Twitter"></a></li>
                 </ul>
             </div>
             <!--redes_sociais grid-4-->
