--- a/peixes.html
+++ b/peixes.html
@@ -210,6 +210,16 @@
     <!--carrega jquery-->
     <script src="./js/plugins.js"></script>
     <script src="./js/main.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145821990-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-145821990-1');
+    </script>
+    
 </body>
 
 </html>
