--- a/sobre.html
+++ b/sobre.html
@@ -163,6 +163,15 @@
     <script src="./js/libs/jquery-1.11.2.min.js"></script>
     <script src="./js/plugins.js"></script>
     <script src="./js/main.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145821990-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-145821990-1');
+    </script>
 </body>
 
 </html>
